--- a/index.html
+++ b/index.html
@@ -29,6 +29,79 @@
   </div>
 </div>
 
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?9243197903709543590">
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid continer">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Tank tops</div>
+        <div class="item">Shirts</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">My cart is currently empty.</div>
+      </div>
+    </div>
+
+    <a class="item">KIDS</a>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">My cart is currently empty.</div>
+      </div>
+    </div>
+
+    <a class="item">SEARCH</a>
+
+  </div>
+</div>
+
+<img class="ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?9243197903709543590">
+
+<div class="footer-background">
+  <div class="ui three column grid container">
+    <div class="column">
+      NAVIGATION
+      <hr/>
+      <div class="ui list">
+        <div class="item">About us</div>
+        <div class="item">Videos</div>
+        <div class="item">Store locations</div>
+      </div>
+    </div>
+    <div class="column">
+      MAIN MENU
+      <hr/>
+      <div class="ui list">
+        <div class="item">Men</div>
+        <div class="item">Women</div>
+        <div class="item">Kids</div>
+      </div>
+    </div>
+    <div class="column">
+      CONNECT
+      <hr/>
+      <div class="ui list">
+        <div class="item">Sign up for the latest updates</div>
+        <div class="ui labeled input"?>
+          <input type="text" placeholder="Enter email address">
+          <div class="ui black label">
+            Join
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
 <script>
   $('.ui.dropdown')
       .dropdown()
