--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?9243197903709543590">
 
 <div class="ui borderless middlemenu menu">
-  <div class="ui centered grid continer">
+  <div class="ui centered grid container">
     <div class="ui dropdown item">
       <div class="text">MEN</div>
       <i class="dropdown icon"></i>
